Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19994

Frequently crashing when clicking on build issues on Issues pane

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 4.6.0-rc1
    • Qt Creator 4.6.0-rc1
    • Debian stretch, QC 4.6 based on Qt5.9 (self-compiled namespaced Qt)

    Description

      Sometimes when having build issues and double ( ? ) clicking on the issue inside the Issues pane QC just crashes..

      [see attached backtrace]

      According to the backtrace it looks like the

      static ITaskHandler *handler(QAction *)

      function retrieves an invalid QVariant and then the qobject_cast() fails/crashes. (I didn't want to just provide a isValid() check as this would just work around the issue)

       

      Not sure if relevant: on the same line I'd have to jump to when clicking on the issue is a breakpoint (and the error marker)

      Attachments

        1. bt.log
          58 kB
          Christian Stenger
        For Gerrit Dashboard: QTCREATORBUG-19994
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes