ITaskHandler: Harden against vanishing ITaskHandlers

Harden against vanishing ITaskHandlers and avoid qobject_casts.

Task-number: QTCREATORBUG-19994
Change-Id: I72bccb944cb6fa6ec92a8c0293617931a2eb2732
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: hjk <hjk@qt.io>